# TrayWeather-QT6-Linux

./: .gitignore  CMakeLists.txt  Main.cpp  TrayWeather.cpp  TrayWeather.h  Utils.cpp  Utils.h  build.sh  linux_fix.h  td
Providers/: OWM25.cpp  OWM30.cpp  OpenMeteo.cpp  WeatherAPI.cpp
dialogs/: ConfigurationDialog.cpp  LocationFinderDialog.cpp  WeatherDialog.cpp  WeatherDialog.h
languages/: bg_BG.ts  translations.qrc
widgets/: CurrentWeatherWidget.cpp  PollutionWidget.cpp  UVWidget.cpp  WeatherWidget.cpp
